...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cLayoutA"
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/gradient_background_2"
...
            android:gravity="center"
            android:text="@string/clean_account_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/clean_account_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <Button
...
            app:layout_constraintTop_toBottomOf="@+id/userAutoLoginPrefs"
            app:layout_constraintVertical_bias="0.567" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cLayoutC"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="35dp"
...
            app:layout_constraintTop_toTopOf="@+id/password"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/show"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:textColorHint="@color/black"
...
